# lyd-lab

./: .gitignore  Lydbølgelab.html  README.md  app.js  compile_commands.json  factory_presets.json  index.html  style.css
.cache/clangd/index/: PluginEditor.cpp.6CE893389A2399D2.idx  PluginEditor.h.9BECB150E1CE62C3.idx  PluginProcessor.cpp.AA2A938D6052AD89.idx  PluginProcessor.h.A7C212EC6080C46B.idx
plugin/: CMakeLists.txt
plugin/.cache/clangd/index/: PluginEditor.cpp.6CE893389A2399D2.idx  PluginEditor.h.9BECB150E1CE62C3.idx  PluginProcessor.cpp.AA2A938D6052AD89.idx  PluginProcessor.h.A7C212EC6080C46B.idx
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
